--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -626,97 +626,149 @@ header {
             }
         }
     }
-    .slider-store {
-        justify-content: space-between;
-        position: relative;
+    .carousel-store {
         display: flex;
-        z-index: 50;
         width: 1330px;
         margin: 0 auto;
-        .slider-block {
+        .slider-store {
+            justify-content: space-between;
+            position: relative;
+            z-index: 50;
             width: 986px;
-            height: 200px;
-            .slider-width {
-                width: 1972px;
-                height: 100%;
-                .slider-carousel {
-                    justify-content: space-between;
-                    align-items: center;
+            .slider-block {
+                width: 986px;
+                height: 200px;
+                &__arrows-one, &__arrows-two {
+                    transition: opacity .3s;
                     position: absolute;
-                    overflow: hidden;
                     cursor: pointer;
-                    display: flex;
                     height: 200px;
-                    width: 986px;
-                    .slider-img  {
-                        background: url(../images/slider/1-9-update.jpg) no-repeat;
-                        background-position: right;
-                        transition: all .5s;
+                    width: 45px;
+                    z-index: 50;
+                    top: 0;
+                }
+                &__arrows-one {
+                    background: url(../images/slider/arrow/arrow-left-slider.svg) center no-repeat;
+                }
+                &__arrows-two {
+                    background: url(../images/slider/arrow/arrow-right-slider.svg) center no-repeat;
+                }
+                &__arrows-one:hover,&__arrows-two:hover {
+                    opacity:  .5;
+                }
+                &__arrows-two {
+                    right: 0;
+                }
+                .slider-width {
+                    width: 1972px;
+                    height: 100%;
+                    .slider-carousel {
+                        justify-content: space-between;
+                        transition: all .9s;
+                        align-items: center;
                         position: absolute;
+                        overflow: hidden;
+                        cursor: pointer;
+                        z-index: 11;
+                        display: flex;
                         height: 200px;
                         width: 986px;
-                    }
-                    &:hover .slider-img {
-                        transform: scale(1.1);
-                    }
-                    &:before {
-                        background-image: linear-gradient(to right, #0e0e0f 37.6%, transparent 100%);
-                        border-left: 2px solid #F25322;
-                        background-color: transparent;
-                        box-sizing: border-box;
-                        position: absolute;
-                        height: 200px;
-                        width: 986px;
-                        content: "";
-                        z-index: 50;
-                    }
-                    &:after {
-                        background: rgba(0, 0, 0, 0.301);
-                        transition: all .5s;
-                        position: absolute;
-                        opacity: 0;
-                        height: 200px;
-                        width: 986px;
-                        content: "";
-                    }
-                    &__arrows-one, &__arrows-two {
-                        transition: opacity .3s;
-                        position: relative;
-                        z-index: 50;
-                        height: 200px;
-                        width: 45px;
-                    }
-                    &__arrows-one {
-                        background: url(../images/slider/arrow/arrow-left-slider.svg) center no-repeat;
-                    }
-                    &__arrows-two {
-                        background: url(../images/slider/arrow/arrow-right-slider.svg) center no-repeat;
-                    }
-                    &__arrows-one:hover,&__arrows-two:hover {
-                        opacity:  .5;
-                    }
-                    &__text {
-                        font-family: Arial, Helvetica, sans-serif;
-                        text-transform: uppercase;
-                        margin: 0 0 27px 23px;
-                        margin-right: auto;
-                        position: relative;
-                        line-height: 35px;
-                        color: #e9e2bf;
-                        font-weight: 700;
-                        font-size: 28px;
-                        z-index: 50;
-                        width: 410px;
-                    }
-                    &:hover:after {
-                        opacity: 1;
+                        .slider-img  {
+                            background: url(../images/slider/1-9-update.jpg) no-repeat;
+                            background-position: right;
+                            transition: all .5s;
+                            position: absolute;
+                            height: 200px;
+                            width: 986px;
+                        }
+                        &:hover .slider-img {
+                            transform: scale(1.1);
+                        }
+                        &:before {
+                            background-image: linear-gradient(to right, #0e0e0f 37.6%, transparent 100%);
+                            border-left: 2px solid #F25322;
+                            background-color: transparent;
+                            box-sizing: border-box;
+                            position: absolute;
+                            height: 200px;
+                            width: 986px;
+                            content: "";
+                            z-index: 50;
+                        }
+                        &:after {
+                            background: rgba(0, 0, 0, 0.301);
+                            transition: all .5s;
+                            position: absolute;
+                            opacity: 0;
+                            height: 200px;
+                            width: 986px;
+                            content: "";
+                        }
+                        &__text {
+                            font-family: Arial, Helvetica, sans-serif;
+                            text-transform: uppercase;
+                            margin: 0 0 27px 75px;
+                            margin-right: auto;
+                            position: relative;
+                            line-height: 35px;
+                            color: #e9e2bf;
+                            font-weight: 700;
+                            font-size: 28px;
+                            z-index: 50;
+                            width: 410px;
+                        }
+                        &:hover:after {
+                            opacity: 1;
+                        }
+                        &:nth-child(2) {
+                            left: 986px;
+                            z-index: 12;
+                            .slider-img {
+                                background: url(../images/slider/playhome3.jpg) no-repeat;
+                                background-position: right;
+                            }
+                        }
+                        &:nth-child(3) {
+                            left: 986px;
+                            z-index: 13;
+                            .slider-img {
+                                background: url(../images/slider/Q2nHXES.jpg) no-repeat;
+                                background-position: right;
+                            }
+                        }
+                        &:nth-child(4) {
+                            left: 986px;
+                            z-index: 14;
+                            .slider-img {
+                                background: url(../images/slider/ref-2-0-615.jpg) no-repeat;
+                                background-position: right;
+                            }
+                        }
+                        &:nth-child(5) {
+                            left: 986px;
+                            z-index: 15;
+                            .slider-img {
+                                background: url(../images/slider/specialoffers.jpg) no-repeat;
+                                background-position: right;
+                            }
+                        }
+                        &:nth-child(6) {
+                            left: 986px;
+                            z-index: 16;
+                            .slider-img {
+                                background: url(../images/slider/wot_twitchprime.jpg) no-repeat;
+                                background-position: right;
+                            }
+                        }
                     }
                 }
             }
         }
         .block-store {
+            margin-left: auto;
             height: 200px;
             width: 302px;
+            z-index: 30;
             .link-store {
                 position: absolute;
                 overflow: hidden;
